[MOSIP-37999]readme.md changes
Signed-off-by: JanardhanBS-SyncByte <janjonny@gmail.com>